--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,7 +6,7 @@
               <h2>About</h2>
               <br/>
                 <p>Colin is a medical student currently living in Sydney, Australia. His interests range from medicine to education. He is also interested in research.</p>
-                <p>You can click the buttons above to navigate their website. If you’d like to get in touch, feel free to say hello through any of the social links below.</p>
+                <p>Interested in working together? Feel free to <a href="mailto:contact@colinhho.com">get in touch</a>.</p>
                 <br/>
               </div>
         </div>
